# errium

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
contributing/: index.html
examples/django-ninja-basic/: main.py
examples/drf-basic/: main.py
examples/fastapi-basic/: main.py
examples/flask-basic/: main.py
roadmap/: index.html
search/: search_index.json
src/errium/: __init__.py  classifiers.py
src/errium/handlers/: validation_handler.py
src/errium/middleware/: error_middleware.py
src/errium_core/classifiers/: base.py  database.py  engine.py  generic.py  status_mapping.py  validation.py
src/errium_core/config/: settings.py
src/errium_core/contracts/: categories.py  classified_error.py  error.py
src/errium_core/formatters/: base.py  default.py
src/errium_drf/: __init__.py  classifiers.py  handler.py  normalizers.py
src/errium_flask/: __init__.py  classifiers.py  extension.py
src/errium_ninja/: __init__.py  classifiers.py  extension.py
tests/: conftest.py
tests/integration/: test_drf_integration.py  test_fastapi_integration.py  test_flask_integration.py  test_ninja_integration.py
tests/unit/: test_classification.py  test_database_classifier.py  test_drf_classifiers.py  test_drf_normalizer.py  test_flask_classifiers.py  test_formatter.py  test_ninja_classifiers.py  test_validation_normalizer.py
(+2 files in other folders)
